--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
     </parent>
 
     <name>Explore With Me</name>
+    <modules>
+        <module>stat-service-parent</module>
+    </modules>
 
     <groupId>ru.practicum</groupId>
     <artifactId>explore-with-me</artifactId>
@@ -25,7 +28,7 @@
     </dependencies>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
