--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.5</version>
+        <version>2.7.18</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <name>Explore With Me</name>
     <modules>
         <module>stat-service-parent</module>
+        <module>explore-with-me-service</module>
+
     </modules>
 
     <groupId>ru.practicum</groupId>
@@ -28,7 +30,7 @@
     </dependencies>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -89,7 +91,7 @@
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.8</version>
+                    <version>0.8.11</version>
                     <configuration>
                         <output>file</output>
                     </configuration>
