--- a/stat-service-parent/stat-service/src/main/resources/application.properties
+++ b/stat-service-parent/stat-service/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.sql.init.mode=always
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://db:5432/statistic
+spring.datasource.url=jdbc:postgresql://stats-db:5432/statistic
 spring.datasource.username=dbuser
 spring.datasource.password=12345
 #---
