--- a/stat-service-parent/stat-common-dto/pom.xml
+++ b/stat-service-parent/stat-common-dto/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>common-dto</artifactId>
+    <artifactId>stat-common-dto</artifactId>
 
 <!--    <properties>-->
 <!--        <maven.compiler.source>21</maven.compiler.source>-->
@@ -21,11 +21,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
