--- a/stat-service-parent/stat-common-dto/pom.xml
+++ b/stat-service-parent/stat-common-dto/pom.xml
@@ -10,5 +10,12 @@
     </parent>
 
     <artifactId>stat-common-dto</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
