--- a/explore-with-me-service/src/main/resources/application.properties
+++ b/explore-with-me-service/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #---
 #spring.datasource.driverClassName=org.postgresql.Driver
@@ -11,8 +13,8 @@ spring.sql.init.mode=always
 #spring.datasource.username=dbuser
 #spring.datasource.password=12345
 #---
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:ewm
+#spring.config.activate.on-profile=ci,test
+#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./db/evm
 spring.datasource.username=test
 spring.datasource.password=test
