--- a/explore-with-me-service/src/main/resources/application.properties
+++ b/explore-with-me-service/src/main/resources/application.properties
@@ -15,6 +15,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #---
 #spring.config.activate.on-profile=ci,test
 #spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./db/evm
+spring.datasource.url=jdbc:h2:file:./db/ewm
 spring.datasource.username=test
 spring.datasource.password=test
