--- a/explore-with-me-service/pom.xml
+++ b/explore-with-me-service/pom.xml
@@ -80,7 +80,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.0.RELEASE</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <goals>
