--- a/stat-service-parent/stat-service/src/main/resources/application.properties
+++ b/stat-service-parent/stat-service/src/main/resources/application.properties
@@ -1,21 +1,20 @@
 server.port=9090
 
 spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 #---
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://stats-db:5432/statistic
-#spring.datasource.username=dbuser
-#spring.datasource.password=12345
-##---
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://stats-db:5432/statistic
+spring.datasource.username=dbuser
+spring.datasource.password=12345
 
-#spring.datasource.url=jdbc:h2:mem:statistic
+#---
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./db/statistic
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.datasource.username=test
 spring.datasource.password=test
