--- a/explore-with-me-service/src/main/resources/application.properties
+++ b/explore-with-me-service/src/main/resources/application.properties
@@ -7,8 +7,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm
-spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
+spring.datasource.url=jdbc:postgresql://ewm-db:5432/ewm
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
 spring.datasource.username=dbuser
 spring.datasource.password=12345
 #---
