--- a/stat-service-parent/stat-service/src/main/resources/application.properties
+++ b/stat-service-parent/stat-service/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.sql.init.mode=always
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/statistic
-#spring.datasource.url=jdbc:postgresql://stats-db:5432/statistic
+#spring.datasource.url=jdbc:postgresql://localhost:5432/statistic
+spring.datasource.url=jdbc:postgresql://stats-db:5432/statistic
 spring.datasource.username=dbuser
 spring.datasource.password=12345
 #---
